# hades2-coop-expanded

./: .clang-format  .gitattributes  .gitignore  .gitmodules  ARCHITECTURE_ZH.md  CLAUDE.md  CMakeLists.txt  DEPLOY.md  LICENSE.txt  PROJECT_LOG_ZH.md  README.md  README_ZH.md  TESTER_README.md  arcana_checkpoint.ps1  build_and_deploy.ps1  build_tester_package.ps1  dev_deploy.ps1  env.cmake.example  install_all.ps1
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml  release.yml
docs/: ARCHITECTURE.md  ARCHITECTURE_ZH.md  DEPLOY.md  PLEASE_READ_README_BEFORE_INSTALLING.txt  PROJECT_LOG.md  PROJECT_LOG_ZH.md  README.md  RELEASE_README.md  安装前请阅读README.txt
game/: CMakeLists.txt
game/include/: HadesModApi.h
game/scripts/: CombinedTraitsUI.lua  CoopCamera.lua  CoopControl.lua  CoopMenu.lua  CoopPlayers.lua  GameFlags.lua  GameModifed.lua  GamemodeInit.lua  HeroContext.lua  HeroContextProxy.lua  HeroContextProxyStore.lua  HeroEx.lua  HookUtils.lua  PlayerVisibilityHelper.lua  RunEx.lua  SecondPlayerUI.lua  TableUtils.lua  config.lua  init.lua  meta.sjson  types.lua
game/scripts/Localizations/: Localization.sjson
game/scripts/hooks/: AnaimationSwapHook.lua  CameraHooks.lua  CameraZoomFactionHook.lua  ControlHooks.lua  DamageHooks.lua  EffectHooks.lua  EnemyAiHooks.lua  EnemyScalingHooks.lua  EngineHooks.lua  FamilliarHooks.lua  FreezeHooks.lua  GameStateHooks.lua  InteractLogicHooks.lua  LootHooks.lua  MapStateHooks.lua  MenuHooks.lua  PlayerVisibilityHooks.lua  ResourceLoadingHooks.lua  RunHooks.lua  SaveHooks.lua  ThreadSplitHooks.lua  TraitHooks.lua  UIHooks.lua  UpgradeChoiceHooks.lua  UseHooks.lua  VulnerabilityHooks.lua  WeaponHooks.lua  WeaponLogicHooksLob.lua
game/scripts/localizations/: Coop.de.sjson  Coop.el.sjson  Coop.en.sjson  Coop.es.sjson  Coop.fr.sjson  Coop.it.sjson  Coop.ja.sjson  Coop.ko.sjson  Coop.pl.sjson  Coop.pt-BR.sjson  Coop.ru.sjson  Coop.tr.sjson  Coop.uk.sjson  Coop.zh-CN.sjson  Coop.zh-TW.sjson
game/scripts/logic/: ChronosRecovery.lua  CombinedTraitsUI.lua  CoopArcana.lua  CoopCamera.lua  CoopControl.lua  CoopDebugMonitor.lua  CoopGame.lua  CoopPlayers.lua  CoopRun.lua  Events.lua  GameStateEx.lua  HeroContext.lua  HeroContextNative.lua  HeroContextProxy.lua  HeroContextProxySpliter.lua  HeroContextProxySpliterStore.lua  HeroContextProxyStore.lua  HeroContextWrapper.lua  HeroEx.lua  PlayerVisibilityHelper.lua  RunEx.lua  SecondPlayerUI.lua
game/scripts/logic/loot/: LootInterface.lua  LootQuery.lua  LootShared.lua
game/scripts/logic/saveHandlers/: HeroContextProxySaver.lua  HeroContextProxySpliterSaver.lua  ISaveHandler.lua  SinglePlayerHeroSaveHandler.lua
game/scripts/loot/: LootInterface.lua  LootShared.lua
game/scripts/mainmenu/: ControllerSelectionMenuScreen.sjson  CoopMenu.lua
game/scripts/utils/: HookStorage.lua  HookUtils.lua  Observable.lua  SimpleHook.lua  TableUtils.lua
game/src/: CoopContext.cpp  CoopContext.h  PlayerAnimationSwap.h  main.cpp  pch.h
game/src/extensions/: LuaFunctionDefs.cpp  LuaFunctionDefs.h  PlayerManagerExtension.cpp  PlayerManagerExtension.h
game/src/hooks/: AllyModelLimitsAssertHooh.cpp  AllyModelLimitsAssertHooh.h  AnimSwapHook.cpp  AnimSwapHook.h  FunctionHook.h  MagnetismHook.cpp  MagnetismHook.h  Mem.cpp  Mem.h
install/: install.ps1  readme.txt
libs/EASTL-forge1.51/: CMakeLists.txt  allocator_forge.cpp  numeric_limits.h
libs/EASTL-forge1.51/EABase/config/: eaplatform.h
libs/EASTL-forge1.51/EAStdC/: EASprintf.cpp
libs/EASTL-forge1.51/forge/: IMemory.h  coreconfig.h
libs/lua-5.2.2/: CMakeLists.txt
scripts/: arcana_checkpoint.ps1  build_and_deploy.bat  build_and_deploy.ps1  build_enemy_scaler.ps1  build_tester_package.ps1  dev_deploy.ps1  install_all.ps1  uninstall_mod.ps1  watch_coop_debug.ps1
thunderstore/: thunderstore.toml
tools/EnemyScalerNative/: EnemyScaler.cpp
tools/TesterInstaller/: Hades2CoopInstaller.csproj  Program.cs  app.manifest
